[package]
name = "thumbnail-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.8.3"
lambda_runtime = "0.6.0"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
thumbnailer = "0.4.0"
mime = "0.3.16"
async-trait = "0.1.66"
ureq = "2.6.2"
aws-smithy-http = "0.55.3"
